--- a/Laboration_1/uppgift_3b/uppgift_3b/Strings.resx
+++ b/Laboration_1/uppgift_3b/uppgift_3b/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="continuePrompt" xml:space="preserve">
+    <value>Tryck på valfri tangent för att fortsätta eller esc för att avbryta...</value>
+  </data>
   <data name="denominatorZeroError" xml:space="preserve">
     <value>Nämnaren får inte vara noll!</value>
   </data>
